[project]
name = "kalmanformer"
version = "0.0.10"
description = "KalmanFormer - using transformer to model the Kalman Gain in Kalman Filters"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'kalman filter',
    'state estimation'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einops>=0.8.0",
    "torch>=2.0",
    "x-mlps-pytorch>=0.2.8",
    "x-transformers>=2.19.7"
]

[project.urls]
Homepage = "https://pypi.org/project/kalmanformer/"
Repository = "https://codeberg.org/lucidrains/kalmanformer"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "kalmanformer",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["kalmanformer"]
